--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 h1 {
   text-align: center;
   color: black;
+  margin-top: -20px;
 }
 
 .intro {
@@ -60,7 +61,7 @@ h1 {
 
 .toggle-btn {
   width: 100%;
-  background-color:#0077cc;
+  background-color: yellow;
   color: black;
   border: none;
   padding: 1rem;
@@ -71,7 +72,7 @@ h1 {
 }
 
 .toggle-btn:hover {
-  background-color:#005fa3;
+  background-color: darkgoldenrod;
 }
 
 .content {
